--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <main>
+    <h1 class="sr-only">3 Column Preview Card</h1>
     <div class="row">
       <div class="column-left">
         <img src="./images/icon-sedans.svg" alt="Sedans">
